# capydata

./: .gitignore  CLOUD_BUILD_TRIGGER_SETUP.md  LANGUAGE_FLASHCARDS_INTEGRATION.md  README.md  add_missing_columns.sql  cloudbuild-production.yaml  cloudbuild-staging.yaml  create_sentiment_table.sql  create_trivia_sessions_table.sql  fix_trivia_database.sql  package-lock.json  package.json
back/: .dockerignore  Dockerfile  README.md  README_DEPLOYMENT.md  cloudbuild-production.yaml  cloudbuild-staging.yaml  cloudbuild.yaml  create_mock_data.py  deploy.sh  pyproject.toml  test_endpoints.sh
back/migrations/: 008_language_progress.sql  add_embeddings.sql  make_url_optional.sql
back/src/: config.py  main.py
back/src/api/: main.py
back/src/api/routes/: __init__.py  scraper.py
back/src/api/scraper/: notte.py
back/src/routes/: ai.py  scraper.py  storage.py
back/src/scraper/: notte.py
back/src/services/: __init__.py
back/src/services/dataset/: __init__.py  base.py
back/src/services/image/: __init__.py  provider.py  service.py
back/src/services/storage/: __init__.py  base.py  filecoin.py  schemas.py  supabase.py
client/: .gitignore  ENVIRONMENT_SETUP.md  README.md  SUPABASE_SETUP.md  TEST_MODE_SETUP.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
client/app/: layout.tsx  page.tsx
client/components/: ImageSelector.tsx  TwitterScraper.tsx
client/lib/: constants.ts
client/pages/: index.tsx
client/providers/: capybara-provider.tsx  index.tsx  user-provider.tsx
client/public/: manifest.json
(+64 files in other folders)
